<resources>
    <string name="app_name">OpiniaoDeTudo</string>
    <string name="nova_opiniao">Nova Opinião</string>
    <string name="form_review_name">Nome</string>
    <string name="form_review_opiniao">Opinião</string>
    <string name="hint_name">Nome do produto/filme/coisa</string>
    <string name="hint_opiniao">Escreva aqui a sua opinião</string>
    <string name="menu_list_reviews_label">Lista Opinião</string>
    <string name="item_list_edit">Modificar</string>
    <string name="item_list_delete">Apagar</string>
    <string name="new_item">Novo Item</string>
    <string name="list_item">Listar Itens</string>
</resources>