<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:text="@string/nova_opiniao"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" android:textSize="24sp" android:textStyle="bold"
        android:layout_width="wrap_content"/>
    <TextView
        android:text="@string/form_review_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>
    <TextView
        android:text="@string/form_review_opiniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_nome" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_nome" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_name"
        android:contentDescription=" "/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:id="@+id/input_review" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent" android:inputType="textMultiLine"
        android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/button_save"
        android:hint="@string/hint_opiniao" android:contentDescription="@string/hint_opiniao"
        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="Gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>